@@ -1,9 +1,14 @@
-FROM maven:3.8.6-eclipse-temurin-17 AS build
+FROM maven:3.9.6-eclipse-temurin-17 AS build
+
+# Set MAVEN_OPTS to ensure compatibility
+ENV MAVEN_OPTS="--add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.util.concurrent=ALL-UNNAMED"
+
 WORKDIR /app
+# Copy project files and build
 COPY . .
 RUN mvn clean package -DskipTests
 
-FROM openjdk:21-jdk
+FROM eclipse-temurin:17-jdk
 WORKDIR /app
 COPY --from=build /app/target/SamNgocLinhPJ-0.0.1-SNAPSHOT.jar app.jar
 EXPOSE 8080
